project/logs/20251006_162531.log
アプリ開始
Use Adapter: NVIDIA GeForce RTX 4060 Laptop GPU

D3D12CreateDevice OK (FeatureLevel: 12.2)
Complete Create Device
Complete Create Commands
Complete Create SwapChain
Complete Create HeapAndTargetView
Complete Create Fence
Complete Create D3D12Device!!!
Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl, profile:ps_6_0

Compile Succeeded, path:Object3D.PS.hlsl, profile:ps_6_0

Begin CompileShader, path:Object2D.VS.hlsl, profile:vs_6_0

Object2D.VS.hlsl:19:27: warning: implicit truncation of vector type [-Wconversion]
    output.position = mul(input.position, gSpriteTransformation.WVP);
                          ^
Object2D.VS.hlsl:19:21: error: cannot convert from 'vector<float, 3>' to 'float4'
    output.position = mul(input.position, gSpriteTransformation.WVP);
                    ^

